Istio/virtualservice-reviews-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - match:
        - headers:
            end-user:
              exact: jason
    - route:
      - destination:
          host: reviews
          subset: v2
      - route:
          - destination:
            host: reviews
            subset: v1
        weight: 20
      - destination:
          host: reviews
          subset: v2
        weight: 30
      - destination:
          host: reviews
          subset: v3
        weight: 50
      timeout: 1s
